# esp_yolo

./: .gitignore  README.md  idf_component.yml
application/: CMakeLists.txt  Makefile  formatter.sh  sdkconfig.defaults
application/main/: CMakeLists.txt  app_camera_esp.cc  app_camera_esp.h  ble_service.cc  ble_service.h  idf_component.yml  image_provider.cc  image_provider.h  main.cc  main_functions.cc  main_functions.h  model.cc  model.h  model_settings.cc  model_settings.h  model_utils.cc  model_utils.h  nimble.cc  nimble.h  person_detect_model_data.cc
application/unit_tests/: CMakeLists.txt  app_main.cc  test_model_utils.cc  test_model_utils.h
data_collector/: labels.txt  model.yaml  model_data.yaml
data_collector/datasets/: convert_model_to_tflite.py  labels.txt  quant_test_model.py  show_samples.py  split_dataset.py  utils.py
data_collector/datasets/labels/: train.cache  val.cache
data_collector/datasets/labels/test/: 003.txt  079.txt
data_collector/datasets/labels/train/: 000.txt  002.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  018.txt  019.txt  020.txt  021.txt  022.txt  023.txt  024.txt  025.txt  026.txt  029.txt  030.txt  031.txt  033.txt  034.txt  036.txt  038.txt  039.txt  040.txt  041.txt  042.txt  043.txt  045.txt  046.txt  047.txt  048.txt  (+21 more)
data_collector/datasets/labels/val/: 011.txt  027.txt  028.txt  032.txt  035.txt  037.txt  044.txt  056.txt  058.txt  062.txt  063.txt  064.txt  066.txt  (+1 more)
data_collector/esp32/: CMakeLists.txt
data_collector/esp32/main/: CMakeLists.txt  idf_component.yml  main.cc  stream_server.cc  stream_server.h  take_picture.c  wifi.cc  wifi.h
data_collector/webserver/: .python-version  capture.py  uploader.py  webserver.py
data_collector/webserver/templates/: index.html
trainer/: .python-version  reshapeall.py  show_samples.py  test_model.py  testmodel_yolo.py  train.py  train_model.py
trainer/YOLOV5m/: config.py  dataset.py  model.py  train.py
trainer/YOLOV5m/utils/: plot_utils.py  training_utils.py
trainer/dataset/labels/: train.cache
trainer/labels/: val.cache
trainer/modules/: config.py  dataset.py  datasets.py  loss.py  models.py  train.py  utils.py
trainer/results/: report.txt
(+3 files in other folders)
